--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-06 02:47 -->
+<!-- 2022-11-07 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfd40ee9">1. 妙妙文章</a>
+<li><a href="#org3d59fce">1. 妙妙文章</a>
 <ul>
-<li><a href="#org6995c46">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgb603ab6">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org25dd14f">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org2b2b8fe">1.4. 关于编辑器</a></li>
-<li><a href="#orgc7ad746">1.5. 关于代码</a>
+<li><a href="#org503b20a">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgc6407d8">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org83aa376">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgd8fe3f3">1.4. 关于编辑器</a></li>
+<li><a href="#org93eb29f">1.5. 关于代码</a>
 <ul>
-<li><a href="#org8980798">1.5.1. Lisp</a></li>
+<li><a href="#org680ff80">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgfae229b">1.6. 关于CPU</a></li>
-<li><a href="#orgf97a450">1.7. 关于算法</a>
+<li><a href="#org0a0c70d">1.6. 关于CPU</a></li>
+<li><a href="#orgfb9acb9">1.7. 关于算法</a>
 <ul>
-<li><a href="#orgc304474">1.7.1. 关于随机</a></li>
+<li><a href="#org852eb0b">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgc9639ff">1.8. 关于AI</a></li>
-<li><a href="#org7bdb175">1.9. 关于软件</a>
+<li><a href="#org68fb1ad">1.8. 关于AI</a></li>
+<li><a href="#org7f367a4">1.9. 关于软件</a>
 <ul>
-<li><a href="#orga8603bf">1.9.1. SQLite</a></li>
+<li><a href="#org340832e">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org9fae617">1.10. 关于workflow</a></li>
+<li><a href="#org205fff9">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org94fe77c">2. 棒棒视频</a>
+<li><a href="#org4f9ca97">2. 棒棒视频</a>
 <ul>
-<li><a href="#org838b1d0">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org37d8edd">2.2. 各种剧</a></li>
-<li><a href="#org17ad2aa">2.3. 电影</a></li>
+<li><a href="#orgcf3c886">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org749070c">2.2. 各种剧</a></li>
+<li><a href="#org6148c80">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org7435582">3. 快乐游戏</a></li>
-<li><a href="#org1be6776">4. 宝藏博主</a></li>
-<li><a href="#org0c5fd9d">5. 有意思的</a>
+<li><a href="#org0dfbe9d">3. 快乐游戏</a></li>
+<li><a href="#org5471759">4. 宝藏博主</a></li>
+<li><a href="#org65027cb">5. 有意思的</a>
 <ul>
-<li><a href="#org1c0f3aa">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgd6a5db4">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org56e6233">6. 我想玩的</a></li>
+<li><a href="#orgf8a5273">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgfd40ee9" class="outline-2">
-<h2 id="orgfd40ee9"><span class="section-number-2">1.</span> <a href="#orgfd40ee9">妙妙文章</a></h2>
+<div id="outline-container-org3d59fce" class="outline-2">
+<h2 id="org3d59fce"><span class="section-number-2">1.</span> <a href="#org3d59fce">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgd14c0cd">
+<figure id="org12b92ed">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -495,8 +495,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org6995c46" class="outline-3">
-<h3 id="org6995c46"><span class="section-number-3">1.1.</span> <a href="#org6995c46">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org503b20a" class="outline-3">
+<h3 id="org503b20a"><span class="section-number-3">1.1.</span> <a href="#org503b20a">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgb603ab6" class="outline-3">
-<h3 id="orgb603ab6"><span class="section-number-3">1.2.</span> <a href="#orgb603ab6">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgc6407d8" class="outline-3">
+<h3 id="orgc6407d8"><span class="section-number-3">1.2.</span> <a href="#orgc6407d8">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -568,8 +568,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org25dd14f" class="outline-3">
-<h3 id="org25dd14f"><span class="section-number-3">1.3.</span> <a href="#org25dd14f">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org83aa376" class="outline-3">
+<h3 id="org83aa376"><span class="section-number-3">1.3.</span> <a href="#org83aa376">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -603,8 +603,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org2b2b8fe" class="outline-3">
-<h3 id="org2b2b8fe"><span class="section-number-3">1.4.</span> <a href="#org2b2b8fe">关于编辑器</a></h3>
+<div id="outline-container-orgd8fe3f3" class="outline-3">
+<h3 id="orgd8fe3f3"><span class="section-number-3">1.4.</span> <a href="#orgd8fe3f3">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -620,8 +620,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgc7ad746" class="outline-3">
-<h3 id="orgc7ad746"><span class="section-number-3">1.5.</span> <a href="#orgc7ad746">关于代码</a></h3>
+<div id="outline-container-org93eb29f" class="outline-3">
+<h3 id="org93eb29f"><span class="section-number-3">1.5.</span> <a href="#org93eb29f">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -646,8 +646,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org8980798" class="outline-4">
-<h4 id="org8980798"><span class="section-number-4">1.5.1.</span> <a href="#org8980798">Lisp</a></h4>
+<div id="outline-container-org680ff80" class="outline-4">
+<h4 id="org680ff80"><span class="section-number-4">1.5.1.</span> <a href="#org680ff80">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -670,8 +670,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgfae229b" class="outline-3">
-<h3 id="orgfae229b"><span class="section-number-3">1.6.</span> <a href="#orgfae229b">关于CPU</a></h3>
+<div id="outline-container-org0a0c70d" class="outline-3">
+<h3 id="org0a0c70d"><span class="section-number-3">1.6.</span> <a href="#org0a0c70d">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -686,8 +686,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgf97a450" class="outline-3">
-<h3 id="orgf97a450"><span class="section-number-3">1.7.</span> <a href="#orgf97a450">关于算法</a></h3>
+<div id="outline-container-orgfb9acb9" class="outline-3">
+<h3 id="orgfb9acb9"><span class="section-number-3">1.7.</span> <a href="#orgfb9acb9">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -706,8 +706,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgc304474" class="outline-4">
-<h4 id="orgc304474"><span class="section-number-4">1.7.1.</span> <a href="#orgc304474">关于随机</a></h4>
+<div id="outline-container-org852eb0b" class="outline-4">
+<h4 id="org852eb0b"><span class="section-number-4">1.7.1.</span> <a href="#org852eb0b">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -721,8 +721,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc9639ff" class="outline-3">
-<h3 id="orgc9639ff"><span class="section-number-3">1.8.</span> <a href="#orgc9639ff">关于AI</a></h3>
+<div id="outline-container-org68fb1ad" class="outline-3">
+<h3 id="org68fb1ad"><span class="section-number-3">1.8.</span> <a href="#org68fb1ad">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -732,8 +732,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7bdb175" class="outline-3">
-<h3 id="org7bdb175"><span class="section-number-3">1.9.</span> <a href="#org7bdb175">关于软件</a></h3>
+<div id="outline-container-org7f367a4" class="outline-3">
+<h3 id="org7f367a4"><span class="section-number-3">1.9.</span> <a href="#org7f367a4">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -744,8 +744,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orga8603bf" class="outline-4">
-<h4 id="orga8603bf"><span class="section-number-4">1.9.1.</span> <a href="#orga8603bf">SQLite</a></h4>
+<div id="outline-container-org340832e" class="outline-4">
+<h4 id="org340832e"><span class="section-number-4">1.9.1.</span> <a href="#org340832e">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9fae617" class="outline-3">
-<h3 id="org9fae617"><span class="section-number-3">1.10.</span> <a href="#org9fae617">关于workflow</a></h3>
+<div id="outline-container-org205fff9" class="outline-3">
+<h3 id="org205fff9"><span class="section-number-3">1.10.</span> <a href="#org205fff9">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -770,8 +770,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org94fe77c" class="outline-2">
-<h2 id="org94fe77c"><span class="section-number-2">2.</span> <a href="#org94fe77c">棒棒视频</a></h2>
+<div id="outline-container-org4f9ca97" class="outline-2">
+<h2 id="org4f9ca97"><span class="section-number-2">2.</span> <a href="#org4f9ca97">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -827,8 +827,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org838b1d0" class="outline-3">
-<h3 id="org838b1d0"><span class="section-number-3">2.1.</span> <a href="#org838b1d0">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgcf3c886" class="outline-3">
+<h3 id="orgcf3c886"><span class="section-number-3">2.1.</span> <a href="#orgcf3c886">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org37d8edd" class="outline-3">
-<h3 id="org37d8edd"><span class="section-number-3">2.2.</span> <a href="#org37d8edd">各种剧</a></h3>
+<div id="outline-container-org749070c" class="outline-3">
+<h3 id="org749070c"><span class="section-number-3">2.2.</span> <a href="#org749070c">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -878,8 +878,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org17ad2aa" class="outline-3">
-<h3 id="org17ad2aa"><span class="section-number-3">2.3.</span> <a href="#org17ad2aa">电影</a></h3>
+<div id="outline-container-org6148c80" class="outline-3">
+<h3 id="org6148c80"><span class="section-number-3">2.3.</span> <a href="#org6148c80">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -914,8 +914,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7435582" class="outline-2">
-<h2 id="org7435582"><span class="section-number-2">3.</span> <a href="#org7435582">快乐游戏</a></h2>
+<div id="outline-container-org0dfbe9d" class="outline-2">
+<h2 id="org0dfbe9d"><span class="section-number-2">3.</span> <a href="#org0dfbe9d">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -945,8 +945,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1be6776" class="outline-2">
-<h2 id="org1be6776"><span class="section-number-2">4.</span> <a href="#org1be6776">宝藏博主</a></h2>
+<div id="outline-container-org5471759" class="outline-2">
+<h2 id="org5471759"><span class="section-number-2">4.</span> <a href="#org5471759">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -957,7 +957,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org307b835">
+<figure id="orgb5df2f7">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -965,8 +965,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0c5fd9d" class="outline-2">
-<h2 id="org0c5fd9d"><span class="section-number-2">5.</span> <a href="#org0c5fd9d">有意思的</a></h2>
+<div id="outline-container-org65027cb" class="outline-2">
+<h2 id="org65027cb"><span class="section-number-2">5.</span> <a href="#org65027cb">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -998,8 +998,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org1c0f3aa" class="outline-3">
-<h3 id="org1c0f3aa"><span class="section-number-3">5.1.</span> <a href="#org1c0f3aa">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgd6a5db4" class="outline-3">
+<h3 id="orgd6a5db4"><span class="section-number-3">5.1.</span> <a href="#orgd6a5db4">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org56e6233" class="outline-2">
-<h2 id="org56e6233"><span class="section-number-2">6.</span> <a href="#org56e6233">我想玩的</a></h2>
+<div id="outline-container-orgf8a5273" class="outline-2">
+<h2 id="orgf8a5273"><span class="section-number-2">6.</span> <a href="#orgf8a5273">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1035,7 +1035,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-29 09:22</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-06 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-07 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
