--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-06 02:47 -->
+<!-- 2022-11-07 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgee8090d">1. 一大早</a></li>
-<li><a href="#orgb07e925">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#orga61ca43">3. 科研训练</a></li>
-<li><a href="#org263da19">4. 520</a></li>
+<li><a href="#org9ad2a4e">1. 一大早</a></li>
+<li><a href="#org6a9fb66">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org019a413">3. 科研训练</a></li>
+<li><a href="#orgc590d91">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgee8090d" class="outline-2">
-<h2 id="orgee8090d"><span class="section-number-2">1.</span> <a href="#orgee8090d">一大早</a></h2>
+<div id="outline-container-org9ad2a4e" class="outline-2">
+<h2 id="org9ad2a4e"><span class="section-number-2">1.</span> <a href="#org9ad2a4e">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb07e925" class="outline-2">
-<h2 id="orgb07e925"><span class="section-number-2">2.</span> <a href="#orgb07e925">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-org6a9fb66" class="outline-2">
+<h2 id="org6a9fb66"><span class="section-number-2">2.</span> <a href="#org6a9fb66">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga61ca43" class="outline-2">
-<h2 id="orga61ca43"><span class="section-number-2">3.</span> <a href="#orga61ca43">科研训练</a></h2>
+<div id="outline-container-org019a413" class="outline-2">
+<h2 id="org019a413"><span class="section-number-2">3.</span> <a href="#org019a413">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-org263da19" class="outline-2">
-<h2 id="org263da19"><span class="section-number-2">4.</span> <a href="#org263da19">520</a></h2>
+<div id="outline-container-orgc590d91" class="outline-2">
+<h2 id="orgc590d91"><span class="section-number-2">4.</span> <a href="#orgc590d91">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-06 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-07 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
