--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-06 02:47 -->
+<!-- 2022-11-07 02:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org643d243">1. 暑假</a>
+<li><a href="#org68c7c24">1. 暑假</a>
 <ul>
-<li><a href="#orgfbdb0e3">1.1. 夏令营</a></li>
+<li><a href="#orgb3a0971">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orga3d0bad">2. 打工</a></li>
-<li><a href="#org4ad03ad">3. 我的928</a>
+<li><a href="#org588feaa">2. 打工</a></li>
+<li><a href="#orgb8b6a63">3. 我的928</a>
 <ul>
-<li><a href="#orge66d103">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org6f7520d">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orga17b733">4. 他们的928</a></li>
-<li><a href="#orgeb953ba">5. 总结</a></li>
+<li><a href="#org5a232a9">4. 他们的928</a></li>
+<li><a href="#org26df60d">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org1973210">
+<figure id="org78be06f">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org643d243" class="outline-2">
-<h2 id="org643d243"><span class="section-number-2">1.</span> <a href="#org643d243">暑假</a></h2>
+<div id="outline-container-org68c7c24" class="outline-2">
+<h2 id="org68c7c24"><span class="section-number-2">1.</span> <a href="#org68c7c24">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgfbdb0e3" class="outline-3">
-<h3 id="orgfbdb0e3"><span class="section-number-3">1.1.</span> <a href="#orgfbdb0e3">夏令营</a></h3>
+<div id="outline-container-orgb3a0971" class="outline-3">
+<h3 id="orgb3a0971"><span class="section-number-3">1.1.</span> <a href="#orgb3a0971">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga3d0bad" class="outline-2">
-<h2 id="orga3d0bad"><span class="section-number-2">2.</span> <a href="#orga3d0bad">打工</a></h2>
+<div id="outline-container-org588feaa" class="outline-2">
+<h2 id="org588feaa"><span class="section-number-2">2.</span> <a href="#org588feaa">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org4ad03ad" class="outline-2">
-<h2 id="org4ad03ad"><span class="section-number-2">3.</span> <a href="#org4ad03ad">我的928</a></h2>
+<div id="outline-container-orgb8b6a63" class="outline-2">
+<h2 id="orgb8b6a63"><span class="section-number-2">3.</span> <a href="#orgb8b6a63">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orge66d103" class="outline-3">
-<h3 id="orge66d103"><span class="section-number-3">3.1.</span> <a href="#orge66d103">928演唱会(bushi</a></h3>
+<div id="outline-container-org6f7520d" class="outline-3">
+<h3 id="org6f7520d"><span class="section-number-3">3.1.</span> <a href="#org6f7520d">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgcdb7e63">
+<figure id="orgcd8c6b6">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgc34b699">
+<figure id="org48a3b08">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orga17b733" class="outline-2">
-<h2 id="orga17b733"><span class="section-number-2">4.</span> <a href="#orga17b733">他们的928</a></h2>
+<div id="outline-container-org5a232a9" class="outline-2">
+<h2 id="org5a232a9"><span class="section-number-2">4.</span> <a href="#org5a232a9">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgeb953ba" class="outline-2">
-<h2 id="orgeb953ba"><span class="section-number-2">5.</span> <a href="#orgeb953ba">总结</a></h2>
+<div id="outline-container-org26df60d" class="outline-2">
+<h2 id="org26df60d"><span class="section-number-2">5.</span> <a href="#org26df60d">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-06 02:47</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-07 02:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
